syntax = "proto3";

// add a new inner tx
message KvTx {
  string key = 2;
  string value = 3;
}

message KVPair {
  string key = 1;
  string value = 2;
}

// extend account state with more data
message AccountKvState { repeated KVPair store = 1; }
